--- a/index.html
+++ b/index.html
@@ -1,12 +1,85 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mahasiswa Teknk Informatika 2020</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <title>Data Mahasiswa TI</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="#">Mahasiswa Teknik Informatika 2020</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ml-auto">
+            <a class="nav-item nav-link active mr-4" href="index.html">Home <span class="sr-only">(current)</span></a>
+          </div>
+        </div>
+    </nav>
+
+    <div class="container">
+        <h3 class="text-center mt-3 mb-4">Data Mahasiswa Teknik Informastika 2021</h3>
+        <button  type="button" class="btn btn-outline-success text-center mt-3 mb-4">Success</button>
+        <table class="table table-striped">
+            <thead>
+              <tr>
+                <th scope="col">No</th>
+                <th scope="col">Nama Mahasiswa</th>
+                <th scope="col">NPM</th>
+                <th scope="col">Alamat</th>
+                <th scope="col">Jenis Kelamin</th>
+                <th scope="col">TTL</th>
+                <th scope="col">Aksi</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Bambang</td>
+                <td>09.2021.1.00962</td>
+                <td>Jl.Panglima Sudirman 76 Surabaya</td>
+                <td>L</td>
+                <td>Jakarta, 25 Mei 1999</td>
+                <td><button type="button" class="btn btn-outline-warning">Edit</button>
+                    <button type="button" class="btn btn-outline-danger">Hapus</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">1</th>
+                <td>Bambang</td>
+                <td>09.2021.1.00962</td>
+                <td>Jl.Panglima Sudirman 76 Surabaya</td>
+                <td>L</td>
+                <td>Jakarta, 25 Mei 1999</td>
+                <td><button type="button" class="btn btn-outline-warning">Edit</button>
+                    <button type="button" class="btn btn-outline-danger">Hapus</button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">1</th>
+                <td>Bambang</td>
+                <td>09.2021.1.00962</td>
+                <td>Jl.Panglima Sudirman 76 Surabaya</td>
+                <td>L</td>
+                <td>Jakarta, 25 Mei 1999</td>
+                <td><button type="button" class="btn btn-outline-warning">Edit</button>
+                    <button type="button" class="btn btn-outline-danger">Hapus</button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  </body>
 </html>
