--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
     </nav>
 
     <div class="container">
-        <h3 class="text-center mt-3 mb-4">Data Mahasiswa Teknik Informastika 2021</h3>
-        <button  type="button" class="btn btn-outline-success text-center mt-3 mb-4">Success</button>
+        <div class="row mt-3 mb-4">
+            <div class="col">
+                <h3>Data Mahasiswa Teknik Informastika 2021</h3>
+            </div>
+            <div class="col mr-auto">
+                <button  type="button" class="btn btn-success">Tambah Data</button>
+            </div>
+        </div>
         <table class="table table-striped">
             <thead>
               <tr>
