--- a/edit.html
+++ b/edit.html
@@ -24,7 +24,7 @@
     </nav>
 
 <div class="container">
-    <h3 class="text-center mt-3 mb-4">Tambah Data Mahasiswa Teknik Informatika</h3>
+    <h3 class="text-center mt-3 mb-4">Edit Data Mahasiswa Teknik Informatika</h3>
     <form action="" method="post">
           <div class="form-group">
             <label>Nama</label>
