--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">Mahasiswa Teknik Informatika 2020</a>
+        <a class="navbar-brand" href="index.html">Mahasiswa Teknik Informatika 2020</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,10 +26,10 @@
     <div class="container">
         <div class="row mt-3 mb-4">
             <div class="col">
-                <h3>Data Mahasiswa Teknik Informastika 2021</h3>
+                <h3>Data Mahasiswa Teknik Informatika 2021</h3>
             </div>
             <div class="col mr-auto">
-                <button  type="button" class="btn btn-success">Tambah Data</button>
+                <a href="tambah.html"><button type="button" class="btn btn-success">Tambah Data</button></a>
             </div>
         </div>
         <table class="table table-striped">
@@ -52,29 +52,7 @@
                 <td>Jl.Panglima Sudirman 76 Surabaya</td>
                 <td>L</td>
                 <td>Jakarta, 25 Mei 1999</td>
-                <td><button type="button" class="btn btn-outline-warning">Edit</button>
-                    <button type="button" class="btn btn-outline-danger">Hapus</button>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">1</th>
-                <td>Bambang</td>
-                <td>09.2021.1.00962</td>
-                <td>Jl.Panglima Sudirman 76 Surabaya</td>
-                <td>L</td>
-                <td>Jakarta, 25 Mei 1999</td>
-                <td><button type="button" class="btn btn-outline-warning">Edit</button>
-                    <button type="button" class="btn btn-outline-danger">Hapus</button>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">1</th>
-                <td>Bambang</td>
-                <td>09.2021.1.00962</td>
-                <td>Jl.Panglima Sudirman 76 Surabaya</td>
-                <td>L</td>
-                <td>Jakarta, 25 Mei 1999</td>
-                <td><button type="button" class="btn btn-outline-warning">Edit</button>
+                <td><a href="edit.html"><button type="button" class="btn btn-outline-warning">Edit</button></a>
                     <button type="button" class="btn btn-outline-danger">Hapus</button>
                 </td>
               </tr>
