--- a/index.html
+++ b/index.html
@@ -1,85 +1,98 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
+
+    <!-- Google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Viga&display=swap" rel="stylesheet" />
+
+    <!-- Remix Icon -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet" />
 
     <title>Data Mahasiswa TI</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">Mahasiswa Teknik Informatika 2020</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
+      <div class="container">
+        <a class="navbar-brand" href="index.html" style="font-family: 'Viga', sans-serif">MAHASISWA TEKNIK INFORMATIKA</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link active mr-4" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active mr-4" href="index.html"><i class="ri-home-4-line"></i></i></a>
           </div>
         </div>
+      </div>
     </nav>
 
     <div class="container">
-        <div class="row mt-3 mb-4">
-            <div class="col">
-                <h3>Data Mahasiswa Teknik Informastika 2021</h3>
-            </div>
-            <div class="col mr-auto">
-                <button  type="button" class="btn btn-success">Tambah Data</button>
-            </div>
+      <div class="row mt-3 mb-4">
+        <div class="col-10">
+          <h3>Data Mahasiswa Teknik Informastika 2020</h3>
         </div>
-        <table class="table table-striped">
-            <thead>
-              <tr>
-                <th scope="col">No</th>
-                <th scope="col">Nama Mahasiswa</th>
-                <th scope="col">NPM</th>
-                <th scope="col">Alamat</th>
-                <th scope="col">Jenis Kelamin</th>
-                <th scope="col">TTL</th>
-                <th scope="col">Aksi</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>Bambang</td>
-                <td>09.2021.1.00962</td>
-                <td>Jl.Panglima Sudirman 76 Surabaya</td>
-                <td>L</td>
-                <td>Jakarta, 25 Mei 1999</td>
-                <td><button type="button" class="btn btn-outline-warning">Edit</button>
-                    <button type="button" class="btn btn-outline-danger">Hapus</button>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">1</th>
-                <td>Bambang</td>
-                <td>09.2021.1.00962</td>
-                <td>Jl.Panglima Sudirman 76 Surabaya</td>
-                <td>L</td>
-                <td>Jakarta, 25 Mei 1999</td>
-                <td><button type="button" class="btn btn-outline-warning">Edit</button>
-                    <button type="button" class="btn btn-outline-danger">Hapus</button>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">1</th>
-                <td>Bambang</td>
-                <td>09.2021.1.00962</td>
-                <td>Jl.Panglima Sudirman 76 Surabaya</td>
-                <td>L</td>
-                <td>Jakarta, 25 Mei 1999</td>
-                <td><button type="button" class="btn btn-outline-warning">Edit</button>
-                    <button type="button" class="btn btn-outline-danger">Hapus</button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="col">
+          <a href="tambah.html"><button type="button" class="btn btn-success">Tambah Data</button></a>
+        </div>
+      </div>
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">No</th>
+            <th scope="col">Nama Mahasiswa</th>
+            <th scope="col">NPM</th>
+            <th scope="col">Alamat</th>
+            <th scope="col">Jenis Kelamin</th>
+            <th scope="col">TTL</th>
+            <th scope="col">Aksi</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Bambang</td>
+            <td>09.2021.1.00962</td>
+            <td>Jl.Panglima Sudirman 76 Surabaya</td>
+            <td>L</td>
+            <td>Jakarta, 25 Mei 1999</td>
+            <td>
+              <button type="button" class="btn btn-outline-warning">Edit</button>
+              <button type="button" class="btn btn-outline-danger">Hapus</button>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">1</th>
+            <td>Bambang</td>
+            <td>09.2021.1.00962</td>
+            <td>Jl.Panglima Sudirman 76 Surabaya</td>
+            <td>L</td>
+            <td>Jakarta, 25 Mei 1999</td>
+            <td>
+              <button type="button" class="btn btn-outline-warning">Edit</button>
+              <button type="button" class="btn btn-outline-danger">Hapus</button>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">1</th>
+            <td>Bambang</td>
+            <td>09.2021.1.00962</td>
+            <td>Jl.Panglima Sudirman 76 Surabaya</td>
+            <td>L</td>
+            <td>Jakarta, 25 Mei 1999</td>
+            <td>
+              <button type="button" class="btn btn-outline-warning">Edit</button>
+              <button type="button" class="btn btn-outline-danger">Hapus</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
     <!-- Optional JavaScript -->
