--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="container">
         <div class="row mt-3 mb-4">
-            <div class="col">
+            <div class="col-10">
                 <h3>Data Mahasiswa Teknik Informatika 2021</h3>
             </div>
             <div class="col mr-auto">
