--- a/tambah.html
+++ b/tambah.html
@@ -2,55 +2,76 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
+
+    <!-- Google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Viga&display=swap" rel="stylesheet" />
+
+    <!-- Remix Icon -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet" />
 
     <title>Data Mahasiswa TI</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="index.html">Mahasiswa Teknik Informatika 2020</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
+      <div class="container">
+        <a class="navbar-brand" href="index.html" style="font-family: 'Viga', sans-serif">MAHASISWA TEKNIK INFORMATIKA</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link active mr-4" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link active mr-4" href="index.html"><i class="ri-home-4-line"></i></i></a>
           </div>
         </div>
+      </div>
     </nav>
 
-<div class="container">
-    <h3 class="text-center mt-3 mb-4">Tambah Data Mahasiswa Teknik Informatika</h3>
-    <form action="" method="post">
+  <div div class="container" style="width: 40rem;">
+    <div class="card shadow">
+      <div class="card-body">
+        <h4 class="card-title text-center mb-4">Tambah Data Mahasiswa Teknik Informatika</h4>
+        <form action="" method="post">
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label>Nama</label>
+              <input name="nama" type="text" class="form-control" placeholder="Nama Lengkap">
+            </div>
+            <div class="form-group col-md-6">
+              <label>NPM</label>
+              <input type="text" class="form-control" placeholder="NPM">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label>Alamat</label>
+              <input name="npm" type="text" class="form-control" placeholder="Alamat">
+            </div>
+            <div class="form-group col-md-6">
+              <label>Jenis Kelamin</label>
+              <select class="form-control">
+                <option disabled selected> - Pilih Jenis Kelamin - </option>
+                <option value="L">Laki - Laki</option>
+                <option value="P">Perempuan</option>
+              </select>
+            </div>
+          </div>
           <div class="form-group">
-            <label>Nama</label>
-            <input name="nama" type="text" class="form-control" placeholder="Nama Lengkap">
-          </div>
-        <div class="form-group">
-          <label>NPM</label>
-          <input type="text" class="form-control" placeholder="NPM">
-        </div>
-        <div class="form-group">
-          <label>Alamat</label>
-          <input name="npm" type="text" class="form-control" placeholder="Alamat">
-        </div>
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label>Jenis Kelamin</label>
-            <input name="jenis" type="text" class="form-control" placeholder="L/P">
-          </div>
-          <div class="form-group col-md-4">
-            <label>Tempat, tanggal lahir</label>
+            <label>Tanggal Lahir</label>
             <input name="ttl" type="text" class="form-control" placeholder="TTL">
           </div>
-        </div>
-        <button type="submit" class="btn btn-primary">Simpan</button>
-    </form>
-</div>
+          <a href="index.html"><button type="button" class="btn btn-danger">Batal</button></a>
+          <button type="submit" class="btn btn-primary">Simpan</button>
+        </form>
+      </div>
+    </div>
+  </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
