--- a/tambah.html
+++ b/tambah.html
@@ -16,6 +16,16 @@
     <!-- Remix Icon -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet" />
 
+    <!-- Date PIcker -->
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css" />
+    <link rel="stylesheet" href="/resources/demos/style.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
+    <script>
+      $(function () {
+        $("#datepicker").datepicker();
+      });
+    </script>
     <title>Data Mahasiswa TI</title>
   </head>
   <body>
@@ -36,22 +46,22 @@
   <div div class="container" style="width: 40rem;">
     <div class="card shadow">
       <div class="card-body">
-        <h4 class="card-title text-center mb-4">Tambah Data Mahasiswa Teknik Informatika</h4>
+        <h4 class="card-title text-center mb-4">Tambah Data Mahasiswa</h4>
         <form action="" method="post">
           <div class="form-row">
             <div class="form-group col-md-6">
               <label>Nama</label>
-              <input name="nama" type="text" class="form-control" placeholder="Nama Lengkap">
+              <input name="nama" type="text" class="form-control" placeholder="Nama Lengkap" autocomplete="off">
             </div>
             <div class="form-group col-md-6">
               <label>NPM</label>
-              <input type="text" class="form-control" placeholder="NPM">
+              <input type="text" class="form-control" placeholder="NPM" autocomplete="off">
             </div>
           </div>
           <div class="form-row">
             <div class="form-group col-md-6">
               <label>Alamat</label>
-              <input name="npm" type="text" class="form-control" placeholder="Alamat">
+              <input name="npm" type="text" class="form-control" placeholder="Alamat" autocomplete="off">
             </div>
             <div class="form-group col-md-6">
               <label>Jenis Kelamin</label>
@@ -64,7 +74,7 @@
           </div>
           <div class="form-group">
             <label>Tanggal Lahir</label>
-            <input name="ttl" type="text" class="form-control" placeholder="TTL">
+            <input name="ttl" type="text" class="form-control" id="datepicker" placeholder="22/10/2000" autocomplete="off">
           </div>
           <a href="index.html"><button type="button" class="btn btn-danger">Batal</button></a>
           <button type="submit" class="btn btn-primary">Simpan</button>
@@ -75,7 +85,7 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
