--- a/mahasiswa.html
+++ b/mahasiswa.html
@@ -36,10 +36,10 @@
     <div class="container">
         <div class="row mt-3 mb-4">
             <div class="col-10">
-                <h4>Data Mahasiswa Teknik Informatika 2021</h4>
+                <h4>Daftar Mahasiswa ITATS</h4>
             </div>
             <div class="col mr-auto">
-                <a href="tambah.html"><button type="button" class="btn btn-success">Tambah Data</button></a>
+                <a href="tambah.html"><button type="button" class="btn btn-success">Tambah Mahasiswa</button></a>
             </div>
         </div>
         <table class="table table-striped">
@@ -49,8 +49,9 @@
                 <th scope="col">Nama Mahasiswa</th>
                 <th scope="col">NPM</th>
                 <th scope="col">Alamat</th>
-                <th scope="col">Jenis Kelamin</th>
-                <th scope="col">TTL</th>
+                <th scope="col">No.Telp</th>
+                <th scope="col">Tgl Lahir</th>
+                <th scope="col">Jurusan</th>
                 <th scope="col">Aksi</th>
               </tr>
             </thead>
@@ -60,8 +61,9 @@
                 <td>Bambang</td>
                 <td>09.2021.1.00962</td>
                 <td>Jl.Panglima Sudirman 76 Surabaya</td>
-                <td>L</td>
-                <td>Jakarta, 25 Mei 1999</td>
+                <td>085664239985</td>
+                <td>25 Mei 1999</td>
+                <td>Teknik Informatika</td>
                 <td><a href="edit.html"><button type="button" class="btn btn-outline-warning">Edit</button></a>
                     <button type="button" class="btn btn-outline-danger">Hapus</button>
                 </td>
