--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h4>Data Mahasiswa Teknik Informatika 2021</h4>
             </div>
             <div class="col mr-auto">
-                <a href="tambah.html"><button type="button" class="btn btn-success">Tambah Data</button></a>
+                <a href="tambahmhs.html"><button type="button" class="btn btn-success">Tambah Data</button></a>
             </div>
         </div>
         <table class="table table-striped">
@@ -62,7 +62,7 @@
                 <td>Jl.Panglima Sudirman 76 Surabaya</td>
                 <td>L</td>
                 <td>Jakarta, 25 Mei 1999</td>
-                <td><a href="edit.html"><button type="button" class="btn btn-outline-warning">Edit</button></a>
+                <td><a href="editmhs.html"><button type="button" class="btn btn-outline-warning">Edit</button></a>
                     <button type="button" class="btn btn-outline-danger">Hapus</button>
                 </td>
               </tr>
