--- a/mahasiswa.html
+++ b/mahasiswa.html
@@ -39,7 +39,7 @@
                 <h4>Daftar Mahasiswa ITATS</h4>
             </div>
             <div class="col mr-auto">
-                <a href="tambah.html"><button type="button" class="btn btn-success">Tambah Mahasiswa</button></a>
+                <a href="tambahmhs.html"><button type="button" class="btn btn-success">Tambah Mahasiswa</button></a>
             </div>
         </div>
         <table class="table table-striped">
@@ -64,7 +64,7 @@
                 <td>085664239985</td>
                 <td>25 Mei 1999</td>
                 <td>Teknik Informatika</td>
-                <td><a href="edit.html"><button type="button" class="btn btn-outline-warning">Edit</button></a>
+                <td><a href="editmhs.html"><button type="button" class="btn btn-outline-warning">Edit</button></a>
                     <button type="button" class="btn btn-outline-danger">Hapus</button>
                 </td>
               </tr>
