--- a/editjurusan.html
+++ b/editjurusan.html
@@ -46,36 +46,21 @@
   <div div class="container" style="width: 40rem;">
     <div class="card shadow">
       <div class="card-body">
-        <h4 class="card-title text-center mb-4">Tambah Data Mahasiswa</h4>
+        <h4 class="card-title text-center mb-4">Edit Jurusan</h4>
         <form action="" method="post">
           <div class="form-row">
             <div class="form-group col-md-6">
-              <label>Nama</label>
+              <label>Nama Jurusan</label>
               <input name="nama" type="text" class="form-control" placeholder="Nama Lengkap" autocomplete="off">
             </div>
-            <div class="form-group col-md-6">
-              <label>NPM</label>
-              <input type="text" class="form-control" placeholder="NPM" autocomplete="off">
-            </div>
           </div>
-          <div class="form-row">
             <div class="form-group col-md-6">
-              <label>Alamat</label>
-              <input name="npm" type="text" class="form-control" placeholder="Alamat" autocomplete="off">
+                <label for="inputState">Kelas</label>
+                <select id="inputState" class="form-control">
+                  <option selected>Pagi</option>
+                  <option selected>Malam</option>
+                </select>
             </div>
-            <div class="form-group col-md-6">
-              <label>Jenis Kelamin</label>
-              <select class="form-control">
-                <option disabled selected> - Pilih Jenis Kelamin - </option>
-                <option value="L">Laki - Laki</option>
-                <option value="P">Perempuan</option>
-              </select>
-            </div>
-          </div>
-          <div class="form-group">
-            <label>Tanggal Lahir</label>
-            <input name="ttl" type="text" class="form-control" id="datepicker" placeholder="22/10/2000" autocomplete="off">
-          </div>
           <a href="index.html"><button type="button" class="btn btn-danger">Batal</button></a>
           <button type="submit" class="btn btn-primary">Simpan</button>
         </form>
