--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
       <div class="container">
-        <a class="navbar-brand" href="index.html" style="font-family: 'Viga', sans-serif">MAHASISWA TEKNIK INFORMATIKA</a>
+        <a class="navbar-brand" href="index.html" style="font-family: 'Viga', sans-serif">Institut Teknologi Adhi Tama Surabaya</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -32,42 +32,27 @@
         </div>
       </div>
     </nav>
-
     <div class="container">
-        <div class="row mt-3 mb-4">
-            <div class="col-10">
-                <h4>Data Mahasiswa Teknik Informatika 2021</h4>
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title text-center">Mahasiswa</h5>
+              <p class="card-text">Daftar Mahasiswa Institut Teknologi Adhi Tama Surabaya</p>
+              <a href="mahasiswa.html" class="card-link">Tampilkan Data</a>
             </div>
-            <div class="col mr-auto">
-                <a href="tambah.html"><button type="button" class="btn btn-success">Tambah Data</button></a>
-            </div>
+          </div>
         </div>
-        <table class="table table-striped">
-            <thead>
-              <tr>
-                <th scope="col">No</th>
-                <th scope="col">Nama Mahasiswa</th>
-                <th scope="col">NPM</th>
-                <th scope="col">Alamat</th>
-                <th scope="col">Jenis Kelamin</th>
-                <th scope="col">TTL</th>
-                <th scope="col">Aksi</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>Bambang</td>
-                <td>09.2021.1.00962</td>
-                <td>Jl.Panglima Sudirman 76 Surabaya</td>
-                <td>L</td>
-                <td>Jakarta, 25 Mei 1999</td>
-                <td><a href="edit.html"><button type="button" class="btn btn-outline-warning">Edit</button></a>
-                    <button type="button" class="btn btn-outline-danger">Hapus</button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title text-center">Jurusan</h5>
+              <p class="card-text">Daftar Jurusan Institut Teknologi Adhi Tama Surabaya</p>
+              <a href="jurusan.html" class="card-link">Tampilkan Data</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Optional JavaScript -->
