--- a/editjurusan.html
+++ b/editjurusan.html
@@ -53,14 +53,14 @@
               <label>Nama Jurusan</label>
               <input name="nama" type="text" class="form-control" placeholder="Nama Lengkap" autocomplete="off">
             </div>
-          </div>
             <div class="form-group col-md-6">
                 <label for="inputState">Kelas</label>
                 <select id="inputState" class="form-control">
                   <option selected>Pagi</option>
-                  <option selected>Malam</option>
+                  <option>Malam</option>
                 </select>
             </div>
+        </div>
           <a href="index.html"><button type="button" class="btn btn-danger">Batal</button></a>
           <button type="submit" class="btn btn-primary">Simpan</button>
         </form>
