--- a/tambahjurusan.html
+++ b/tambahjurusan.html
@@ -46,7 +46,7 @@
   <div div class="container" style="width: 40rem;">
     <div class="card shadow">
       <div class="card-body">
-        <h4 class="card-title text-center mb-4">Edit Data Jurusan</h4>
+        <h4 class="card-title text-center mb-4">Tambah Data Jurusan</h4>
         <form action="" method="post">
           <div class="form-row">
             <div class="form-group col-md-6">
