--- a/mahasiswa.html
+++ b/mahasiswa.html
@@ -35,7 +35,7 @@
 
     <div class="container">
         <div class="row mt-3 mb-4">
-            <div class="col-10">
+            <div class="col-9">
                 <h4>Daftar Mahasiswa ITATS</h4>
             </div>
             <div class="col mr-auto">
@@ -64,8 +64,9 @@
                 <td>085664239985</td>
                 <td>25 Mei 1999</td>
                 <td>Teknik Informatika</td>
-                <td><a href="editmhs.html"><button type="button" class="btn btn-outline-warning">Edit</button></a>
-                    <button type="button" class="btn btn-outline-danger">Hapus</button>
+                <td>
+                  <a href="editmhs.html"><span class="badge badge-warning">Edit</span></a>
+                  <a href=""><span type="button" class="badge badge-danger">Hapus</span></a>
                 </td>
               </tr>
             </tbody>
