--- a/jurusan.html
+++ b/jurusan.html
@@ -48,23 +48,17 @@
                 <th scope="col">No</th>
                 <th scope="col">Nama Jurusan</th>
                 <th scope="col">Kelas</th>
+                <th scope="col">Aksi</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <th scope="row">1</th>
                 <td>Sistem Informasi</td>
-                <td>Pagi</td>
-                <td><a href="editjurusan.html"><button type="button" class="btn btn-outline-warning">Edit</button></a>
-                    <button type="button" class="btn btn-outline-danger">Hapus</button>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">1</th>
-                <td>Sistem Informasi</td>
                 <td>Malam</td>
-                <td><a href="editjurusan.html"><button type="button" class="btn btn-outline-warning">Edit</button></a>
-                    <button type="button" class="btn btn-outline-danger">Hapus</button>
+                <td>
+                  <a href="editjurusan.html"><span class="badge badge-warning">Edit</span></a>
+                  <a href=""><span type="button" class="badge badge-danger">Hapus</span></a>
                 </td>
               </tr>
             </tbody>
