--- a/tambahjurusan.html
+++ b/tambahjurusan.html
@@ -61,7 +61,7 @@
                 </select>
             </div>
         </div>
-          <a href="index.html"><button type="button" class="btn btn-danger">Batal</button></a>
+          <a href="jurusan.html"><button type="button" class="btn btn-danger">Batal</button></a>
           <button type="submit" class="btn btn-primary">Simpan</button>
         </form>
       </div>
