--- a/tambahmhs.html
+++ b/tambahmhs.html
@@ -72,11 +72,21 @@
               </select>
             </div>
           </div>
-          <div class="form-group">
-            <label>Tanggal Lahir</label>
-            <input name="ttl" type="text" class="form-control" id="datepicker" placeholder="22/10/2000" autocomplete="off">
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label>Tanggal Lahir</label>
+              <input name="ttl" type="text" class="form-control" id="datepicker" placeholder="22/10/2000" autocomplete="off">
+            </div>
+            <div class="form-group col-md-6">
+              <label>Jurusan</label>
+              <select class="form-control">
+                <option disabled selected> - Pilih Jurusan dan Kelas - </option>
+                <option value="L">Laki - Laki</option>
+                <option value="P">Perempuan</option>
+              </select>
+            </div>
           </div>
-          <a href="index.html"><button type="button" class="btn btn-danger">Batal</button></a>
+          <a href="mahasiswa.html"><button type="button" class="btn btn-danger">Batal</button></a>
           <button type="submit" class="btn btn-primary">Simpan</button>
         </form>
       </div>
