--- a/editmhs.html
+++ b/editmhs.html
@@ -76,7 +76,7 @@
             <label>Tanggal Lahir</label>
             <input name="ttl" type="text" class="form-control" id="datepicker" placeholder="22/10/2000" autocomplete="off">
           </div>
-          <a href="mahasiwa.html"><button type="button" class="btn btn-danger">Batal</button></a>
+          <a href="mahasiswa.html"><button type="button" class="btn btn-danger">Batal</button></a>
           <button type="submit" class="btn btn-primary">Simpan</button>
         </form>
       </div>
