--- a/tambahjurusan.html
+++ b/tambahjurusan.html
@@ -51,7 +51,7 @@
           <div class="form-row">
             <div class="form-group col-md-6">
               <label>Nama Jurusan</label>
-              <input name="nama" type="text" class="form-control">
+              <input name="nama" type="text" class="form-control" autocomplete="OFF">
             </div>
             <div class="form-group col-md-6">
                 <label for="inputState">Kelas</label>
