--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title text-center">Mahasiswa</h5>
+              <img src="assets/mahasiswa.png" class="card-img-top" alt="">
               <p class="card-text">Daftar Mahasiswa Institut Teknologi Adhi Tama Surabaya</p>
               <a href="mahasiswa.html" class="card-link">Tampilkan Data</a>
             </div>
@@ -47,6 +48,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title text-center">Jurusan</h5>
+              <img src="assets/jurusan.png" class="card-img-top" alt="" style="width: 97%;">
               <p class="card-text">Daftar Jurusan Institut Teknologi Adhi Tama Surabaya</p>
               <a href="jurusan.html" class="card-link">Tampilkan Data</a>
             </div>
